--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
             <version>2.78</version>
         </dependency>
         <dependency>
+            <groupId>org.jdbi</groupId>
+            <artifactId>jdbi3-sqlobject</artifactId>
+            <type>pom</type>
+            <version>3.0.0-beta2</version>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.6</version>
